@@ -10,6 +10,7 @@
 
 
 Version 4.2.3
+ - Fixed: [ 1953767 ] 4.1.5rel ... Negative #s in import statistics ( fisharebest )
  - Update: PCLzip 2.8.2 (volschin)
  - Update: TCPDF 4.8.016 (volschin)
  - Fixed: [ 1738619 ] Deleting Gedcom file - Misc Entried Remain in DB (fisharebest)
